Frontend/tabina/src/Css/page/recipe-detail.css
.nav {
    position: sticky !important;
}

.recipe-detail {
    display: flex;
    flex-direction: column;
    margin: 0px 50px;
}

.recipe-detail-breadcrumb {
    display: flex;
    margin-top: 39px;
    margin-bottom: 39px;
}

.recipe-detail-breadcrumb p {
    font-weight: 600;
    font-size: 20px;
    line-height: 24.2px;
    margin: 0;
}

.recipe-detail-breadcrumb p a {
    text-decoration: underline;
    /* color: #F8DEC3;
    -webkit-text-stroke-width: 0.2px;
    -webkit-text-stroke-color: #28161C; */
}

/* .recipe-detail-breadcrumb p a:hover {
    color: #F8DEC3;
} */

.recipe-detail-content {
    display: flex;
}

.recipe-detail-content-left {
    max-width: fit-content;
    display: flex;
    flex-direction: column;
    margin-right: 106px;
}

.recipe-detail-img {
    width: 633px;
    height: 484px;
    border-radius: 20px;
    margin: 0;
    object-fit: cover;
    object-position: 100%;
    margin-bottom: 60px;
}

.recipe-detail-content-left-nutritions {
    max-width: 633px;
}

.recipe-detail-content-left-nutritions-title {
    display: flex;
    margin-bottom: 30px;
}

.recipe-detail-content-left-nutritions-title-head {
    font-weight: 700;
    font-size: 40px;
    line-height: 48.41px;
}

.recipe-detail-content-left-nutritions-title-number {
    font-weight: 500;
    font-size: 40px;
    line-height: 48.41px;
    flex-grow: 1;
    text-align: right;
}

::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
}

::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0, 0, 0, .5);
    box-shadow: 0 0 1px rgba(255, 255, 255, .5);
}

.recipe-detail-content-left-nutritions-list {
    max-height: 328px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.recipe-detail-content-right {
    display: flex;
    flex-direction: column;
    width: 1081px;
}

.recipe-detail-content-right-title {
    padding-bottom: 50px;
    border-bottom: 1px solid #000000;
    margin-bottom: 40px;
}

.recipe-detail-content-right-title h2 {
    font-weight: 800;
    font-size: 70px;
    line-height: 84.72px;
    margin: 0 0 23px 0;
}

.recipe-detail-content-right-title-stat {
    display: flex;
}

.recipe-detail-content-right-title-stat-rating {
    display: inline-block;
    height: 50px;
    padding-right: 127.33px;
    border-right: 1px solid #000000;
}

.recipe-detail .star-color {
    width: 50px;
    height: 50px;
    margin-right: 16.67px; 
}

.recipe-detail .star-color:last-child {
    margin-right: 0px !important;
}

.recipe-detail-content-right-title-stat-level {
    display: flex;
    align-items: center;

    flex-grow: 1;
}

.recipe-detail-content-right-title-stat-level-name {
    font-weight: 700;
    font-size: 40px;
    line-height: 48.41px;
    flex-grow: 1;
    text-align: center;
}

.recipe-detail .level-color {
    margin-right: 10px;
}

.recipe-detail .level-color:last-child {
    margin-right: 0px;
}

.recipe-detail-content-right-info {
    display: flex;
    flex-direction: column;
}

.recipe-detail-content-right-info-time {
    display: flex;
    margin-bottom: 30px;
}

.recipe-detail-content-right-info-title {
    font-weight: 700;
    font-size: 35px;
    line-height: 42px;
    width: 317px;
    /* flex-grow: 1; */
}

.recipe-detail-content-right-info-time-container {
    display: flex;
    align-items: baseline;
}

.recipe-detail-content-right-info-time-total {
    margin-right: 30px;
}

.recipe-detail-content-right-info-time-total:last-child {
    margin-right: 0px;
}

.recipe-detail-content-right-info-time-total-title {
    font-weight: 500;
    font-size: 20px;
    line-height: 24.2px;
    margin-right: 15px;
}       

.recipe-detail-content-right-info-time-total-value {
    font-weight: 600;
    font-size: 30px;
    line-height: 36.31px;
}

.recipe-detail-content-right-info-ingredients {
    display: flex;
}

.recipe-detail-content-right-info-ingredients-list {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.recipe-detail .ingredient-item {
    /* margin-right: 30px; */
    margin-bottom: 20px;
}

.recipe-detail-content-right-info-calo {

}

.recipe-detail-content-right-instructions {

}

